force-app/main/default/objects/Product2/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
            <value>
                <fullName>Annualised fees</fullName>
            </value>
            <value>
                <fullName>Ongoing annualised fees</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Ongoing annualised fees (includes all elements annual, monthly, quartlery, end of year etc) - minus implementation fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>