force-app/main/default/objects/Product2/fields/Payment_Term_Partner__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Partner__c</fullName>
    <inlineHelpText>No. of days.</inlineHelpText>
    <label>Payment Term - Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>